Backport to 1.16; comment out non-backported plugins